Add cases to show forEachOrdered does not prevent parallel processing with the initial parallel stream but executes the result sequentially